@@ -3,13 +3,12 @@ Hash: SHA256
 
 DIST ruby-recaptcha-1.0.2.gem 12288 RMD160 03bf8028522bf8672e0396b4da996b3afeb5d775 SHA1 c0dbcd28f482113757aa5c2a45c4509d31546c30 SHA256 bc792e56c30fd931220e4f99e0b46d3b84b1583867e7119fd1af7bbd95db67b1
 EBUILD ruby-recaptcha-1.0.2-r1.ebuild 719 RMD160 ef0d2c38d78608ce92e72a3130cf011b73cd28aa SHA1 b927c3f2f27830907a22816245b06391d6322b00 SHA256 349b74a45eb1a31abce3e790bd90b33217e6cbbdbe32f17cff236f22176f6f6e
-EBUILD ruby-recaptcha-1.0.2.ebuild 513 RMD160 d445c43a0ed984d203c24da6c0dda437b7fba656 SHA1 0dea503dbb85ba142ba3035ccd237f866bce8379 SHA256 2fca13a9d1b63c44a10499a33f651ae8636a35450f3aa834a9e014046ad49303
-MISC ChangeLog 837 RMD160 dbd9d0c53ca8c69bbb03da4457447ff659fdacff SHA1 2ef739b1e4cace286d0652d3233643a1ba42fbe0 SHA256 d29a69dffa6f3af4dc03e0afdbbbd719bae828f552ece6cce3fb4436388b0a7d
+MISC ChangeLog 942 RMD160 9f477a6d9b4b9365dbc286749a5308a8fdf21c88 SHA1 66cc8cd0bb8e5c346a0d14711d3077b354b2c5a1 SHA256 8844aaa396767cdab05153e8b8c071f9ec5bf03d0e8ef648f039214ecfaeec67
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkxsHhcACgkQZihJkut28SsAmAEAh2+++z+ihRgD/JBqmvGKD+Pj
-36upa3VkRZj9nw8GyLABAJnR1VwnlKUOlrivusSXZO/q1iE9Ndl0BOCy+QK1z6Vs
-=qzjq
+iF4EAREIAAYFAkyA3iEACgkQZihJkut28Ss4fgEAvDiA6DjDKga76YW304i9vloz
+x3rc6jyp+4DjmUZIetcBALRKE/+WLOjycklrVgY6jMEqkHBfRG8uwZCSQaDWBoZR
+=xheo
 -----END PGP SIGNATURE-----
